--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* body{height: 100vh;
-background: linear-gradient(#2a00b7, #42006C);
+body{height: 100vh;
+background: #405D72;
 font-family: Arial, Helvetica, sans-serif;
 color: #fff;
-} */
+}
