--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,15 @@
-.btnstyle button{padding: 10px;
-font-size: 20px;}
+.btn-hero {
+  padding: 10px;
+  font-size: 18px;
+  background-color: rgb(98 84 243);
+  color: #fff;
+  width: 8rem;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.btn-hero:hover {
+  background-color: #fff;
+  color: rgb(98 84 243);
+  border: 1px solid;
+}
